Bug 32997 - r600 colortiling alignment broken
Summary: r600 colortiling alignment broken
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-11 09:21 UTC by Benjamin Franzke
Modified: 2011-03-07 12:13 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Image of broken colortiling (380.44 KB, image/jpeg)
2011-01-11 09:21 UTC, Benjamin Franzke
no flags Details
How it should look like (23.36 KB, image/png)
2011-01-11 09:24 UTC, Benjamin Franzke
no flags Details

Description Benjamin Franzke 2011-01-11 09:21:37 UTC
Created attachment 41877 [details]
Image of broken colortiling

Following commit breaks colortiling on r600 with some resolutions:
http://cgit.freedesktop.org/xorg/driver/xf86-video-ati/commit/?id=fccdca8db34010f566bd068c74cdef0f4a8cb7f5

The horizontal lines are out of alignment, its shown in the attached image.

used software:
X Server 1.9.2
xf86-video-ati commit fccdca8db34010f566bd068c74cdef0f4a8cb7f5 or later

used hardware:
01:05.0 VGA compatible controller [0300]: ATI Technologies Inc RS780M/RS780MN [Radeon HD 3200 Graphics] [1002:9612]

xorg config:
Section "Device"
	Identifier "HD 3200"
	Driver "radeon"
	Option "ColorTiling" "on"
EndSection

broken resolutions:
 1366x768
 848x480
 720x480

working (alignment ok):
 1280x720
 1152x720
 800x600
Comment 1 Benjamin Franzke 2011-01-11 09:24:03 UTC
Created attachment 41878 [details]
How it should look like
Comment 2 udo 2011-01-11 09:51:50 UTC
Same here with git radeon_drv.so

DVI-0 connected 1680x1050+0+0 (0x54) normal (normal left inverted right x axis y
Chipset: "ATI Radeon HD 3600 XT" (ChipID = 0x9598)
Comment 4 Benjamin Franzke 2011-01-11 12:47:27 UTC
(In reply to comment #3)
> Should be fixed in:
> http://cgit.freedesktop.org/xorg/driver/xf86-video-ati/commit/?id=af2e6d7d2f1b3d8f8f6b0acfb2b7b0cfaff7bcdb

doesnt work here, still same issue
Comment 5 Alex Deucher 2011-01-11 13:24:55 UTC
fixed in:
c5b3db18d888552328e9718ea022794fc5bde352
Comment 6 Benjamin Franzke 2011-01-11 13:36:41 UTC
(In reply to comment #5)
> fixed in:
> c5b3db18d888552328e9718ea022794fc5bde352

Fixed it here too.
Comment 7 udo 2011-01-12 06:17:26 UTC
Fixed here too.
Comment 8 Paul Ezvan 2011-01-12 09:59:44 UTC
Not fixed here in c5b3db18d888552328e9718ea022794fc5bde352.

Screen 0: minimum 320 x 200, current 2960 x 1050, maximum 8192 x 8192
DVI-0 connected 1680x1050+0+0 (normal left inverted right x axis y axis) 433mm x 270mm

DIN disconnected (normal left inverted right x axis y axis)
DVI-1 connected 1280x1024+1680+0 (normal left inverted right x axis y axis) 376mm x 301mm

01:00.0 VGA compatible controller: ATI Technologies Inc RV770 [Radeon HD 4870]
Comment 9 Alex Deucher 2011-01-12 22:33:21 UTC
(In reply to comment #8)
> Not fixed here in c5b3db18d888552328e9718ea022794fc5bde352.

What kernel are you running?  There were some problems in how the tiling group size was calculated on some older kernels.  Can you try 2.6.37?
Comment 10 Paul Ezvan 2011-01-13 07:03:39 UTC
It's drm-core-next branch 56bec7c009872ef33fe452ea75fecba481351b44 (last update at this time).

I will try with 2.6.37 asap.
Comment 11 Alex Deucher 2011-01-13 08:16:44 UTC
(In reply to comment #10)
> It's drm-core-next branch 56bec7c009872ef33fe452ea75fecba481351b44 (last update
> at this time).

If you are running drm-core-next, no need to try 2.6.37.  Can you dump some regs for me with avivotool (http://cgit.freedesktop.org/~airlied/radeontool/) as root?

avivotool regmatch 0x2760
avivotool regmatch 0x98F0
Comment 12 Paul Ezvan 2011-01-13 10:55:37 UTC
My gentoo with drm-core-next kernel doesn't boot anymore, so here is the result of the test with kernel 2.6.37.

0x2760	0x00007251 (29265)
0x98F0	0xbe148a56 (-1105950122)
Comment 13 Asbjørn Sannes 2011-02-03 12:00:51 UTC
With the danger of polluting this ticket, I think I may have the same problem. I do not get any corruption before I run xv to display an image. Then it stays corrupted, much linke the "Image of broken colortiling" above.

I am using: Linux 2.6.38rc3, git of xf86-video-ati.
I will attach an image shortly.
Comment 14 Asbjørn Sannes 2011-02-03 12:02:35 UTC
Image was a little big: http://www.sannes.org/misc/corruption-after-xv.jpg
Comment 15 Asbjørn Sannes 2011-02-12 05:05:54 UTC
Turns out Bug 33929 fixes it for me. So just ignore my posts.
Comment 16 Jerome Glisse 2011-03-07 12:13:51 UTC
Ok fixed


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.