kms: fix pitch aligment for scanout

Display has slightly stricter pitch alignment requirements
than other blocks.  Factor that in when aligning pitch.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=32997